--- a/.gitignore
+++ b/.gitignore
@@ -145,3 +145,6 @@ upload/1759490174054.png
 /upload
 Ayushastra.zip
 *.zip
+app_old_2_01_2026/connection/connection.js
+/app_old_2_01_2026/controller/admin
+/app_old_2_01_2026
